--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -171,6 +171,7 @@ jobs:
         
         LATESMOSDNSVER=`curl -s "https://api.github.com/repos/IrineSistiana/mosdns/releases/latest" | awk -F '"' '/tag_name/{print $4}'|sed 's/v//'`
         sed -i 's/TESTPKG_VERSION:=.*/TESTPKG_VERSION:='"${LATESMOSDNSVER}"'/g' feeds/mosdns/mosdns/Makefile
+        rm -f feeds/mosdns/luci-app-mosdns/po/zh_Hans
         [ -d feeds/mosdns/luci-app-mosdns/po/zh-cn ] && mv feeds/mosdns/luci-app-mosdns/po/zh-cn feeds/mosdns/luci-app-mosdns/po/zh_Hans
         
         echo wget https://raw.githubusercontent.com/coolsnowwolf/lede/master/package/lean/ddns-scripts_aliyun/update_aliyun_com.sh -q --no-check-certificate -O feeds/packages/net/ddns-scripts/files/usr/lib/ddns/update_aliyun_com.sh
@@ -205,6 +206,7 @@ jobs:
         sed -i "/tristate /a\\\t   default \$(shell if [ '\$(lang)' == 'zh_Hans' ]\; then echo y\; else echo n\; fi))" feeds/luci/luci.mk
         sed -i 's|($(lang))")|($(lang))"|' feeds/luci/luci.mk
         sed -i '/Target System/{n;s/default .*/default TARGET_x86/;}' scripts/target-metadata.pl
+        echo sed -i 's/default "generic" if !HAS_SUBTARGETS/default "64" if !HAS_SUBTARGETS/g' scripts/target-metadata.pl
         sed -i '/GRUB_TIMEOUT/{n;n;n;s/5/0/;}' config/Config-images.in
         sed -i '/TARGET_ROOTFS_PARTSIZE/{n;n;n;s/256/160/;}' config/Config-images.in
         sed -i '/^config KERNEL_MIPS_FPU_EMULATOR/{n;n;s/ if TARGET_pistachio//;}' config/Config-kernel.in
