--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -157,7 +157,8 @@ jobs:
         echo 'src-git wrtbwmon https://github.com/brvphoenix/wrtbwmon' >> feeds.conf.default
         echo 'src-git luciAppWrtbwmon https://github.com/brvphoenix/luci-app-wrtbwmon' >> feeds.conf.default
         echo 'src-git OpenAppFilter https://github.com/destan19/OpenAppFilter' >> feeds.conf.default
-        echo 'src-git helloworld https://github.com/fw876/helloworld' >> feeds.conf.default
+        echo 'src-git helloworld https://github.com/fw876/helloworld'
+        echo 'src-git helloworld https://github.com/xiaorouji/openwrt-passwall' >> feeds.conf.default
         echo 'src-git xiaorouji https://github.com/xiaorouji/openwrt-package'
         echo 'src-git mosdns https://github.com/QiuSimons/openwrt-mos' >> feeds.conf.default
         echo 'src-git muzipkg https://github.com/muziling/openwrt-package' >> feeds.conf.default
