--- a/.github/workflows/build-Lienol.yml
+++ b/.github/workflows/build-Lienol.yml
@@ -127,6 +127,7 @@ jobs:
           sed -i "s/add_list system.ntp.server='3.*/add_list system.ntp.server='ntp2.aliyun.com'"/ package/base-files/files/bin/config_generate
           sed -i "s/set system\.\@system\[-1\].timezone='UTC'/set system\.\@system\[-1\]\.timezone='CST-8'\n\t\tset system\.\@system\[-1\]\.zonename='Asia\/Shanghai'/" package/base-files/files/bin/config_generate
           sed -i 's/192.168.1.1/192.168.222.1/g' package/base-files/files/bin/config_generate
+          echo 'net.ipv4.tcp_retries2=5' >> package/kernel/linux/files/sysctl-nf-conntrack.conf
           cat target/linux/x86/Makefile
           make defconfig
           echo 11111111111
