--- a/.github/workflows/build-Lean.yml
+++ b/.github/workflows/build-Lean.yml
@@ -122,6 +122,7 @@ jobs:
           mv -f 64.mk openwrt/target/linux/x86/image/64.mk
           cd openwrt
           sed -i 's/192.168.1.1/192.168.222.1/g' package/base-files/files/bin/config_generate
+          echo 'net.ipv4.tcp_retries2=5' >> package/kernel/linux/files/sysctl-nf-conntrack.conf
           cat target/linux/x86/Makefile
           make defconfig
           echo 11111111111
