--- a/.github/workflows/build-dsmloader.yml
+++ b/.github/workflows/build-dsmloader.yml
@@ -64,9 +64,9 @@ jobs:
         echo '}' >> user_config.json
 
         echo 'step 4'
-        sudo ./ext-manager.sh add 'https://github.com/pocopico/rp-ext/raw/main/vmxnet3/rpext-index.json'
+        sudo bash ext-manager.sh add 'https://github.com/pocopico/rp-ext/raw/main/vmxnet3/rpext-index.json'
         echo sed -i '2 i \ \ "pocopico.vmxnet3": "https://github.com/pocopico/rp-ext/raw/main/vmxnet3/rpext-index.json",' bundled-exts.json
-        sudo ./build-loader.sh 'DS918+' '7.1-42661'
+        sudo bash build-loader.sh 'DS918+' '7.10-42661'
         ls -l images
         mv images/redpill-DS918+*.img images/redpill-DS918+.img
 
