--- a/.github/workflows/build-dsmloader.yml
+++ b/.github/workflows/build-dsmloader.yml
@@ -64,11 +64,10 @@ jobs:
         echo '}' >> user_config.json
 
         echo 'step 4'
-        sed -i 's/cd "${BASH_SOURCE%\/\*}/cd "$(dirname ${BASH_SOURCE\})/g' ext-manager.sh
-        sed -i 's/cd "${BASH_SOURCE%\/\*}/cd "$(dirname ${BASH_SOURCE\})/g' build-loader.sh
-        sudo bash ext-manager.sh add 'https://github.com/pocopico/rp-ext/raw/main/vmxnet3/rpext-index.json'
+        export TERM=dumb
+        sudo ./ext-manager.sh add 'https://github.com/pocopico/rp-ext/raw/main/vmxnet3/rpext-index.json'
         echo sed -i '2 i \ \ "pocopico.vmxnet3": "https://github.com/pocopico/rp-ext/raw/main/vmxnet3/rpext-index.json",' bundled-exts.json
-        sudo bash build-loader.sh 'DS918+' '7.10-42661'
+        sudo ./build-loader.sh 'DS918+' '7.1.0-42661'
         ls -l images
         mv images/redpill-DS918+*.img images/redpill-DS918+.img
 
