--- a/.github/workflows/build-dsmloader.yml
+++ b/.github/workflows/build-dsmloader.yml
@@ -67,6 +67,11 @@ jobs:
         export TERM=dumb
         sudo ./ext-manager.sh add 'https://github.com/pocopico/rp-ext/raw/main/vmxnet3/rpext-index.json'
         echo sed -i '2 i \ \ "pocopico.vmxnet3": "https://github.com/pocopico/rp-ext/raw/main/vmxnet3/rpext-index.json",' bundled-exts.json
+        mkdir buildpat
+        wget https://github.com/RedwinX/redpill-load/raw/develop/buildpat/buildpat-918p-7.1-42621.sh
+        cd buildpat
+        sh buildpat-918p-7.1-42621.sh
+        cd ..
         sudo ./build-loader.sh 'DS918+' '7.1.0-42661'
         ls -l images
         mv images/redpill-DS918+*.img images/redpill-DS918+.img
