--- a/.github/workflows/build-dsmloader.yml
+++ b/.github/workflows/build-dsmloader.yml
@@ -68,12 +68,13 @@ jobs:
         sudo ./ext-manager.sh add 'https://github.com/pocopico/rp-ext/raw/main/vmxnet3/rpext-index.json'
         echo sed -i '2 i \ \ "pocopico.vmxnet3": "https://github.com/pocopico/rp-ext/raw/main/vmxnet3/rpext-index.json",' bundled-exts.json
         cd buildpat
+        sed -i 's/42621/42661/g' buildpat-918p-7.1-42621.sh
         sudo sh buildpat-918p-7.1-42621.sh
         cd ..
-        newsha=$(sha256sum -b buildpat/ds918p_42621.pat |awk '{print $1}')
+        newsha=$(sha256sum -b buildpat/ds918p_42661.pat |awk '{print $1}')
         sed -i "s/1fcb4e2bfcea26e381fc6680198158694ee695e6323a5b8cd9aec6cb411bb562/'$newsha'/g" config/DS918+/7.1.0-42661/config.json
         [ -d cache ] || mkdir cache
-        mv buildpat/ds918p_42621.pat cache
+        mv buildpat/ds918p_42661.pat cache
         sudo ./build-loader.sh 'DS918+' '7.1.0-42661'
         ls -l images
         mv images/redpill-DS918+*.img images/redpill-DS918+.img
