--- a/.github/workflows/build-dsmloader.yml
+++ b/.github/workflows/build-dsmloader.yml
@@ -72,7 +72,7 @@ jobs:
         sudo sh buildpat-918p-7.1-42621.sh
         cd ..
         newsha=$(sha256sum -b buildpat/ds918p_42661.pat |awk '{print $1}')
-        sed -i "s/1fcb4e2bfcea26e381fc6680198158694ee695e6323a5b8cd9aec6cb411bb562/'$newsha'/g" config/DS918+/7.1.0-42661/config.json
+        sed -i "s/1fcb4e2bfcea26e381fc6680198158694ee695e6323a5b8cd9aec6cb411bb562/$newsha/g" config/DS918+/7.1.0-42661/config.json
         [ -d cache ] || mkdir cache
         mv buildpat/ds918p_42661.pat cache
         sudo ./build-loader.sh 'DS918+' '7.1.0-42661'
