--- a/.github/workflows/build-dbmanager.yml
+++ b/.github/workflows/build-dbmanager.yml
@@ -36,11 +36,11 @@ jobs:
         git clone https://github.com/microsoft/vcpkg vcpkg
         cd vcpkg
         .\bootstrap-vcpkg.bat
-        .\vcpkg\vcpkg install openssl:x64-windows-static
-        .\vcpkg\vcpkg install fmt:x64-windows-static
-        .\vcpkg\vcpkg install rapidjson:x64-windows-static
-        .\vcpkg\vcpkg install keystone:x64-windows-static
-        .\vcpkg\vcpkg install unicorn:x64-windows-static
+        .\vcpkg install openssl:x64-windows-static
+        .\vcpkg install fmt:x64-windows-static
+        .\vcpkg install rapidjson:x64-windows-static
+        .\vcpkg install keystone:x64-windows-static
+        .\vcpkg install unicorn:x64-windows-static
         .\vcpkg integrate install
 
     # 编译整个项目
