--- a/.github/workflows/build-unraid-driver.yml
+++ b/.github/workflows/build-unraid-driver.yml
@@ -35,6 +35,14 @@ jobs:
           tar xvf linux-5.19.12.tar
           git clone --depth 1 https://github.com/mtorromeo/r8168.git r8168
 
+      - name: patch the r8168
+        run: |
+          cp r8168p/*.patch /workdir/r8168
+          cd /workdir/r8168
+          wget https://github.com/coolsnowwolf/lede/raw/master/package/lean/r8168/patches/001-r8168-add-LED-configuration-from-OF.patch
+          wget https://github.com/coolsnowwolf/lede/raw/master/package/lean/r8168/patches/030-5.19-support.patch
+          find . -type f -iname '*.patch' -print0|xargs -n1 -0 patch -p 1 -i
+
       - name: Compile the kernel
         run: |
           cp linux-5.19.9-Unraid/.config /workdir/linux-5.19.12
@@ -59,10 +67,6 @@ jobs:
       - name: Compile the r8168
         run: |
           cd /workdir/r8168
-          wget https://github.com/coolsnowwolf/lede/raw/master/package/lean/r8168/patches/001-r8168-add-LED-configuration-from-OF.patch
-          wget https://github.com/coolsnowwolf/lede/raw/master/package/lean/r8168/patches/030-5.19-support.patch
-          cp ../r8168p/*.patch .
-          find . -type f -iname '*.patch' -print0|xargs -n1 -0 patch -p 1 -i
           make -C /lib/modules/5.19.12-Unraid/build M=$(pwd)/src modules
           sudo make -C /lib/modules/5.19.12-Unraid/build M=$(pwd)/src INSTALL_MOD_DIR=kernel/drivers/net/ethernet/realtek/ modules_install
 
