--- a/.github/workflows/build-unraid-driver.yml
+++ b/.github/workflows/build-unraid-driver.yml
@@ -1,5 +1,6 @@
 # copy the patches and .config (important!) and subdirectory from unraid server which located at /usr/src (like /usr/src/linux-4.19.94-Unraid/) to step kernel source directory
 # have a look .config, unraid use gcc12
+# https://elixir.bootlin.com/linux/v6.0/A/ident/blk_queue_split  找函数在新的内核里是否还在
 name: Unraid-CI
 
 on:
@@ -30,9 +31,10 @@ jobs:
       - name: Clone source code
         run: |
           cd /workdir
-          wget https://cdn.kernel.org/pub/linux/kernel/v5.x/linux-5.19.12.tar.xz
-          xz -d linux-5.19.12.tar.xz
-          tar xvf linux-5.19.12.tar
+          wget https://cdn.kernel.org/pub/linux/kernel/v6.x/linux-6.0.tar.xz
+          xz -d linux-6.0.tar.xz
+          tar xvf linux-6.0.tar
+          mv linux-6.0 linux-999
           git clone --depth 1 https://github.com/mtorromeo/r8168.git r8168
 
       - name: patch the r8168
@@ -45,9 +47,9 @@ jobs:
 
       - name: Compile the kernel
         run: |
-          cp linux-5.19.9-Unraid/.config /workdir/linux-5.19.12
-          cp -r linux-5.19.9-Unraid/* /workdir/linux-5.19.12
-          cd /workdir/linux-5.19.12
+          cp linux-5.19.9-Unraid/.config /workdir/linux-999
+          cp -r linux-5.19.9-Unraid/* /workdir/linux-999
+          cd /workdir/linux-999
           ls -l *.patch
           find . -type f -iname '*.patch' -print0|xargs -n1 -0 patch -p 1 -i
           #sed -i '/CONFIG_8139TOO/d' .config
@@ -60,25 +62,25 @@ jobs:
 
           make oldconfig
           make -j4 bzImage
-          echo /workdir/linux-5.19.12/arch/x86_64/boot/bzImage
+          echo /workdir/linux-999/arch/x86_64/boot/bzImage
           make -j4 modules
           sudo make modules_install
 
       - name: Compile the r8168
         run: |
           cd /workdir/r8168
-          make -C /lib/modules/5.19.12-Unraid/build M=$(pwd)/src modules
-          sudo make -C /lib/modules/5.19.12-Unraid/build M=$(pwd)/src INSTALL_MOD_DIR=kernel/drivers/net/ethernet/realtek/ modules_install
+          make -C /lib/modules/6.0--Unraid/build M=$(pwd)/src modules
+          sudo make -C /lib/modules/6.0--Unraid/build M=$(pwd)/src INSTALL_MOD_DIR=kernel/drivers/net/ethernet/realtek/ modules_install
 
       - name: Compress kernel modules
         run: |
-          cd /lib/modules/5.19.12-Unraid/
+          cd /lib/modules/6.0--Unraid/
           sudo rm -f build
           sudo rm -f source
           sudo ln -s /usr/src/linux-5.19.9-Unraid build
           sudo ln -s /usr/src/linux-5.19.9-Unraid source
           cd /workdir
-          mksquashfs /lib/modules/5.19.12-Unraid/ bzmodules -keep-as-directory -noappend
+          mksquashfs /lib/modules/6.0-Unraid/ bzmodules -keep-as-directory -noappend
 
       - name: Upload bzmodules file
         uses: actions/upload-artifact@v3
@@ -90,4 +92,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: bzImage
-          path: /workdir/linux-5.19.12/arch/x86_64/boot/bzImage
+          path: /workdir/linux-999/arch/x86_64/boot/bzImage
