--- a/.github/workflows/build-unraid-driver.yml
+++ b/.github/workflows/build-unraid-driver.yml
@@ -7,6 +7,8 @@ on:
   workflow_dispatch:
 
 env:
+  ORI_KERNEL_VERSION: 5.19.14
+  MY_KERNEL_VERSION: 5.19.16
   TZ: Asia/Shanghai
 
 jobs:
@@ -31,10 +33,10 @@ jobs:
       - name: Clone source code
         run: |
           cd /workdir
-          wget https://cdn.kernel.org/pub/linux/kernel/v6.x/linux-6.0.tar.xz
-          xz -d linux-6.0.tar.xz
-          tar xvf linux-6.0.tar
-          mv linux-6.0 linux-999
+          wget https://cdn.kernel.org/pub/linux/kernel/v5.x/linux-5.19.16.tar.xz
+          xz -d linux-$MY_KERNEL_VERSION.tar.xz
+          tar xvf linux-$MY_KERNEL_VERSION.tar
+          #mv linux-5.19.16 linux-999
           git clone --depth 1 https://github.com/mtorromeo/r8168.git r8168
 
       - name: patch the r8168
@@ -47,9 +49,9 @@ jobs:
 
       - name: Compile the kernel
         run: |
-          cp linux-5.19.9-Unraid/.config /workdir/linux-999
-          cp -r linux-5.19.9-Unraid/* /workdir/linux-999
-          cd /workdir/linux-999
+          cp linux-$ORI_KERNEL_VERSION-Unraid/.config /workdir/linux-$MY_KERNEL_VERSION
+          cp -r linux-$ORI_KERNEL_VERSION-Unraid/* /workdir/linux-$MY_KERNEL_VERSION
+          cd /workdir/linux-$MY_KERNEL_VERSION
           ls -l *.patch
           find . -type f -iname '*.patch' -print0|xargs -n1 -0 patch -p 1 -i
           #sed -i '/CONFIG_8139TOO/d' .config
@@ -62,25 +64,25 @@ jobs:
 
           make oldconfig
           make -j4 bzImage
-          echo /workdir/linux-999/arch/x86_64/boot/bzImage
+          echo /workdir/linux-$MY_KERNEL_VERSION/arch/x86_64/boot/bzImage
           make -j4 modules
           sudo make modules_install
 
       - name: Compile the r8168
         run: |
           cd /workdir/r8168
-          make -C /lib/modules/6.0--Unraid/build M=$(pwd)/src modules
-          sudo make -C /lib/modules/6.0--Unraid/build M=$(pwd)/src INSTALL_MOD_DIR=kernel/drivers/net/ethernet/realtek/ modules_install
+          make -C /lib/modules/$MY_KERNEL_VERSION-Unraid/build M=$(pwd)/src modules
+          sudo make -C /lib/modules/$MY_KERNEL_VERSION-Unraid/build M=$(pwd)/src INSTALL_MOD_DIR=kernel/drivers/net/ethernet/realtek/ modules_install
 
       - name: Compress kernel modules
         run: |
-          cd /lib/modules/6.0--Unraid/
+          cd /lib/modules/$MY_KERNEL_VERSION-Unraid/
           sudo rm -f build
           sudo rm -f source
-          sudo ln -s /usr/src/linux-5.19.9-Unraid build
-          sudo ln -s /usr/src/linux-5.19.9-Unraid source
+          sudo ln -s /usr/src/linux-$ORI_KERNEL_VERSION-Unraid build
+          sudo ln -s /usr/src/linux-$ORI_KERNEL_VERSION-Unraid source
           cd /workdir
-          mksquashfs /lib/modules/6.0-Unraid/ bzmodules -keep-as-directory -noappend
+          mksquashfs /lib/modules/$MY_KERNEL_VERSION-Unraid/ bzmodules -keep-as-directory -noappend
 
       - name: Upload bzmodules file
         uses: actions/upload-artifact@v3
@@ -92,4 +94,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: bzImage
-          path: /workdir/linux-999/arch/x86_64/boot/bzImage
+          path: /workdir/linux-$MY_KERNEL_VERSION/arch/x86_64/boot/bzImage
