--- a/.github/workflows/build-unraid-driver.yml
+++ b/.github/workflows/build-unraid-driver.yml
@@ -94,4 +94,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: bzImage
-          path: /workdir/linux-$MY_KERNEL_VERSION/arch/x86_64/boot/bzImage
+          path: /workdir/linux-${env.MY_KERNEL_VERSION}/arch/x86_64/boot/bzImage
